# Air-Hockey-Project

./: README for handover.docx
Motor Control/: odrive_config.py  odrive_server_main.py  odrive_set_idle.py
Tang_Jonathan_Version/: CMakeLists.txt  ClientSocket.cpp  ImageProcessing.cpp  ImageProcessing.h  aruco_test.cpp  client.py  hh.cpp  main.h  out_camera_data.xml  sequential.cpp  server.py  tcamimage.cpp  tcamimage.h  udp_client_server.cpp
